--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "assets",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon"
@@ -14,6 +13,7 @@
     "chokidar": "^3.5.3",
     "ejs": "^3.1.9",
     "nodemon": "^3.0.2",
-    "prettier": "^3.1.1"
+    "prettier": "^3.1.1",
+    "prisma": "^5.7.0"
   }
 }
