--- a/package.json
+++ b/package.json
@@ -4,14 +4,18 @@
   "description": "",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon"
+    "server:dev": "nodemon --exec \"dart run\" --ext dart",
+    "asset:dev": "node assets/config/watch.js",
+    "dev": "concurrently 'npm run server:dev' 'npm run asset:dev'"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "chokidar": "^3.5.3",
+    "concurrently": "^8.2.2",
     "ejs": "^3.1.9",
+    "livereload": "^0.9.3",
     "nodemon": "^3.0.2",
     "prettier": "^3.1.1",
     "prisma": "^5.7.0"
