--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,8 +9,15 @@ environment:
 # Add regular dependencies here.
 dependencies:
   alfred: ^1.1.1
+  dart_jsonwebtoken: ^2.12.1
+  dbcrypt: ^2.0.0
+  dotenv: ^4.2.0
+  json_annotation: ^4.8.1
+  orm: ^3.4.5
   # path: ^1.8.0
 
 dev_dependencies:
+  build_runner: ^2.4.7
+  json_serializable: ^6.7.1
   lints: ^2.1.0
   test: ^1.24.0
