--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "livereload": "^0.9.3",
     "nodemon": "^3.0.2",
     "prettier": "^3.1.1",
-    "prisma": "^5.7.0"
+    "prisma": "^5.7.0",
+    "webpack": "^5.89.0"
   }
 }
