--- a/package.json
+++ b/package.json
@@ -19,6 +19,11 @@
     "nodemon": "^3.0.2",
     "prettier": "^3.1.1",
     "prisma": "^5.7.0",
+    "ts-loader": "^9.5.1",
+    "typescript": "^5.3.3",
     "webpack": "^5.89.0"
+  },
+  "dependencies": {
+    "jwt-decode": "^4.0.0"
   }
 }
