--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "nodemon": "^3.0.2",
     "prettier": "^3.1.1",
     "prisma": "^5.7.0",
+    "sass-embedded": "^1.69.5",
     "ts-loader": "^9.5.1",
     "typescript": "^5.3.3",
     "webpack": "^5.89.0"
