--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "ejs": "^3.1.9",
     "imagemin": "^8.0.1",
     "imagemin-pngquant": "^9.0.2",
+    "imagemin-svgo": "^10.0.1",
     "livereload": "^0.9.3",
     "nodemon": "^3.0.2",
     "pngquant-bin": "^8.0.1",
