--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "prettier": "^3.1.1",
     "prisma": "^5.7.0",
     "sass-embedded": "^1.69.5",
+    "svgo-loader": "^4.0.0",
     "ts-loader": "^9.5.1",
     "typescript": "^5.3.3",
     "webpack": "^5.89.0"
