--- a/assets/src/scripts/tsconfig.json
+++ b/assets/src/scripts/tsconfig.json
@@ -2,13 +2,10 @@
   "compilerOptions": {
     "noEmit": false,
     "sourceMap": true,
-    // "strict": true,
-    // "noImplicitReturns": true,
-    // "allowJs": true,
-    // "declaration": true,
     "noImplicitAny": true,
     "target": "ES5",
     "module": "ES2015",
-    "moduleResolution": "Node"
+    "moduleResolution": "Node",
+    "rootDir": "."
   }
 }
