--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,8 @@ dependencies:
   dotenv: ^4.2.0
   json_annotation: ^4.8.1
   orm: ^3.4.5
+  path: ^1.9.0
+  postgres: ^3.0.5
   uuid: ^4.3.1
   # path: ^1.8.0
 
